# WAIFU

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: WAIFU.hpp
src/: WAIFU.cpp  main.cpp
